<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">Wachtwoordmanager</string>
    <string name="hoofdwachtwoord">Hoofdwachtwoord</string>
    <string name="herhaal">Herhaal wachtwoord</string>
    <string name="openen">Openen</string>
    <string name="aanmaken">Kluis aanmaken</string>
    <string name="zoeken">Zoeken…</string>
    <string name="nieuw_item">Nieuw item</string>
    <string name="naam">Naam</string>
    <string name="gebruikersnaam">Gebruikersnaam</string>
    <string name="wachtwoord">Wachtwoord</string>
    <string name="url">Website / URL</string>
    <string name="notities">Notities</string>
    <string name="opslaan">Opslaan</string>
    <string name="verwijderen">Verwijderen</string>
    <string name="kopieer">Kopieer wachtwoord</string>
    <string name="genereer">Genereer</string>
    <string name="vergrendelen">Vergrendelen</string>
    <string name="gekopieerd">Wachtwoord gekopieerd!</string>
    <string name="opgeslagen">✓ Opgeslagen</string>
    <string name="fout_wachtwoord">Verkeerd hoofdwachtwoord</string>
    <string name="fout_herhaal">Wachtwoorden komen niet overeen</string>
    <string name="fout_kort">Minimaal 6 tekens vereist</string>
    <string name="verwijder_bevestig">Wil je dit item definitief verwijderen?</string>
    <string name="ja">Ja</string>
    <string name="nee">Nee</string>
    <string name="symbolen">Symbolen</string>
    <string name="lengte">Lengte</string>
    <string name="toon_wachtwoord">Toon</string>
    <string name="nieuwe_kluis">Maak een hoofdwachtwoord aan om te beginnen.</string>
    <string name="bestaande_kluis">Voer je hoofdwachtwoord in.</string>
</resources>
